--- a/Assignments/Assignment Flex RWD/T83_SpaceX_Template_styles.css
+++ b/Assignments/Assignment Flex RWD/T83_SpaceX_Template_styles.css
@@ -234,7 +234,7 @@ footer #right_footer {
 @media only screen and (max-width: 600px) {
   * {
     box-sizing: border-box;
-    padding: 0;
+    padding: 2px;
     margin-right: 0;
   }
   header {
