--- a/Assignments/Assignment Flex RWD/T85_Tour_templatestyle.css
+++ b/Assignments/Assignment Flex RWD/T85_Tour_templatestyle.css
@@ -134,14 +134,14 @@ nav a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
 }
 .section3 article {
   width: 225px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center; */
 }
 .section3 article figure img {
   height: 32px;
