--- a/Assignments/Assignment Grid RWD/T86_10000Coders_template_styles.css
+++ b/Assignments/Assignment Grid RWD/T86_10000Coders_template_styles.css
@@ -83,6 +83,9 @@ nav a {
 }
 .section1 figure img {
   width: 100%;
+  /* float: right; */
+  width: 630px;
+  height: 300px;
 }
 .section1 figcaption {
   order: 1;
@@ -163,6 +166,9 @@ nav a {
   border: 1px solid #dedede;
   padding: 4px;
   margin-bottom: 10px;
+  width: 215px;
+  aspect-ratio: auto 215 / 100;
+  height: 100px;
 }
 .section3 article figcaption{
   display:grid;
@@ -239,6 +245,12 @@ footer p {
   .section1 {
     width: 100%;
     grid-template-columns: auto;
+  }
+  .section1 figure img{
+    width: 100%;
+    /* float: right; */
+    /* width: 630px; */
+    height: 300px;
   }
   .section1 figure {
     width: 100%;
