--- a/HTML/RWD/Template_responsive_grid/Template4.css
+++ b/HTML/RWD/Template_responsive_grid/Template4.css
@@ -14,6 +14,7 @@ header {
   margin: 0 auto;
   background-color: #333;
   padding: 20px 0;
+  overflow: auto;
 }
 header #hgroup {
   display: grid;
