--- a/Java Scritp/DOM/Template/Template2.html
+++ b/Java Scritp/DOM/Template/Template2.html
@@ -44,36 +44,36 @@
             <div id="homepage">
                 <section id="latest" class="clear">
                     <article class="one_quarter">
-                        <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
-                            <figcaption>Image Caption Here</figcaption>
+                        <figure class="myImage">
+                            <!-- <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315"> -->
+                            <!-- <figcaption>Image Caption Here</figcaption> -->
                         </figure>
                     </article>
                     <article class="one_quarter">
-                        <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
-                            <figcaption>Image Caption Here</figcaption>
+                        <figure class="myImage">
+                            <!-- <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315"> -->
+                            <!-- <figcaption>Image Caption Here</figcaption> -->
                         </figure>
                     </article>
                     <article class="one_quarter">
-                        <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
-                            <figcaption>Image Caption Here</figcaption>
+                        <figure class="myImage">
+                            <!-- <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315"> -->
+                            <!-- <figcaption>Image Caption Here</figcaption> -->
                         </figure>
                     </article>
                     <article class="one_quarter lastbox">
-                        <figure>
-                            <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315">
-                            <figcaption>Image Caption Here</figcaption>
+                        <figure class="myImage">
+                            <!-- <img src="../Template/template_images/215x315.gif" alt="" width="215" height="315"> -->
+                            <!-- <figcaption>Image Caption Here</figcaption> -->
                         </figure>
                     </article>
                 </section>
-                <section class="shout">
-                    <p>
+                <section class="shout" id="one">
+                    <!-- <p>
                         Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
                         Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna
                         urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
-                    </p>
+                    </p> -->
                 </section>
             </div>
             <div id="content">
@@ -81,9 +81,9 @@
                     <ul>
                         <li>
                             <article class="clear">
-                                <figure>
-                                    <img src="../Template/template_images/180x150.gif" alt="">
-                                    <figcaption>
+                                <figure class="fig2">
+                                    <!-- <img src="../Template/template_images/180x150.gif" alt=""> -->
+                                    <!-- <figcaption>
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
                                             This is a W3C compliant free website template from
@@ -95,15 +95,15 @@
                                         <footer class="more">
                                             <a href="#">Read More>></a>
                                         </footer>
-                                    </figcaption>
+                                    </figcaption> -->
                                 </figure>
                             </article>
                         </li>
                         <li class="last">
                             <article class="clear">
-                                <figure>
-                                    <img src="../Template/template_images/180x150.gif" alt="">
-                                    <figcaption>
+                                <figure class="fig2">
+                                    <!-- <img src="../Template/template_images/180x150.gif" alt=""> -->
+                                    <!-- <figcaption>
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
                                             This is a W3C compliant free website template from
@@ -115,7 +115,7 @@
                                         <footer class="more">
                                             <a href="#">Read More>></a>
                                         </footer>
-                                    </figcaption>
+                                    </figcaption> -->
                                 </figure>
                             </article>
                         </li>
@@ -123,7 +123,7 @@
                 </section>
             </div>
             <aside id="right_column">
-                <h2 class="title">Categories</h2>
+                <!-- <h2 class="title">Categories</h2>
                 <nav>
                     <ul>
                         <li>
@@ -157,7 +157,7 @@
                             <a href="#">Free WebSite Themes</a>
                         </li>
                     </ul>
-                </nav>
+                </nav> -->
             </aside>
         </div>
     </div>
