--- a/Java Scritp/DOM/Template/Template2.html
+++ b/Java Scritp/DOM/Template/Template2.html
@@ -163,14 +163,14 @@
     </div>
     <div class="wrapper row3">
         <footer id="footer" class="clear">
-            <p class="f1_left">
+            <!-- <p class="f1_left">
                 Copyright © 2018 - All Rights Reserved -
                 <a href="#">Domain Name</a>
             </p>
             <p class="f1_right">
                 Template by
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
-            </p>
+            </p> -->
         </footer>
     </div>
     <script src="./Template2.js "></script>
