--- a/Templates Dynamically nov 13/basic-84/styles/layout.css
+++ b/Templates Dynamically nov 13/basic-84/styles/layout.css
@@ -32,8 +32,8 @@ img{margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;
 address, article, aside, figcaption, figure, footer, header, nav, section{display:block; margin:0; padding:0;}
 
 q{display:block; padding:0 10px 8px 10px; color:#979797; background-color:#ECECEC; font-style:italic; line-height:normal;}
-q:before{content:'“ '; font-size:26px;}
-q:after{content:' „'; font-size:26px; line-height:0;}
+q:before{content:'ï¿½ '; font-size:26px;}
+q:after{content:' ï¿½'; font-size:26px; line-height:0;}
 
 /* ----------------------------------------------Wrapper-------------------------------------*/
 
@@ -55,8 +55,8 @@ h1, h2, h3, h4, h5, h6{margin:0; padding:0; font-size:16px; font-weight:bold; fo
 address{font-style:normal;}
 
 blockquote, q{display:block; padding:8px 10px; color:#979797; background-color:#ECECEC; font-style:italic; line-height:normal;}
-blockquote:before, q:before{content:'“ '; font-size:26px;}
-blockquote:after, q:after{content:' „'; font-size:26px; line-height:0;}
+blockquote:before, q:before{content:'ï¿½ '; font-size:26px;}
+blockquote:after, q:after{content:' ï¿½'; font-size:26px; line-height:0;}
 
 form, fieldset, legend{margin:0; padding:0; border:none;}
 legend{display:none;}
@@ -67,7 +67,7 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 .two_third{width:630px;}
 .three_third{width:960px; float:none; margin-right:0; clear:both;}
 
-.one_quarter, .two_quarter, .three_quarter, .four_quarter{display:block; float:left; margin:0 20px 0 0; text-align:justify;}
+.one_quarter, .two_quarter, .three_quarter, .four_quarter{display:block; float:left; margin:0 10px 0 0; text-align:justify;}
 .one_quarter{width:225px;}
 .two_quarter{width:470px;}
 .three_quarter{width:715px;}
@@ -92,7 +92,7 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 #header nav ul{padding:0 20px;}
 #header nav li{display:inline; margin-right:25px; text-transform:uppercase;}
 #header nav li.last{margin-right:0;}
-#header nav li a{color:#C0BAB6; background-color:#232323;}
+#header nav li a{color:#C0BAB6; background-color:#232323;    cursor: pointer;}
 #header nav li a:hover{color:#FF9900; background-color:#232323;}
 
 /*----------------------------------------------Content Area-------------------------------------*/
@@ -117,10 +117,10 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 #container #homepage h1{margin-bottom:25px; padding-bottom:10px; border-bottom:1px solid #D6D6D6;}
 
 #container #homepage #services{}
-#container #homepage #services article{display:inline; float:left; width:300px; margin:0 30px 0 0; padding:0;}
+#container #homepage #services article{display:inline; float:left; width:220px; margin:0 10px 0 0; padding:0;}
 #container #homepage #services .last{margin-right:0;}
 #container #homepage #services figure{display:inline; float:left;}
-#container #homepage #services strong{float:left; margin:8px 0 0 10px; padding:0; font-size:14px; font-weight:bold; text-transform:uppercase;}
+#container #homepage #services strong{float:left; margin:8px 0 0 0px; padding:0; font-size:14px; font-weight:bold; text-transform:uppercase;}
 #container #homepage #services p{display:block; margin:0; padding:5px 0 0 0; clear:both; line-height:1.6em;}
 #container #homepage #services .spacer{clear:both; padding:8px 0; line-height:normal;}
 
