--- a/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/styles.css
+++ b/Assignments/Assignment Dynamic Templates/Dynamic Basic 88/styles.css
@@ -81,6 +81,7 @@
 }
 #section1 img{
     width:100%;
+    height:360px;
 }
 /*==========================================section 2==========================================*/
 #section2{
@@ -90,12 +91,15 @@
     grid-template-columns: auto auto auto ;
     /* place-items: center; */
     justify-content: space-between;
+    column-gap: 10px;
 }
 #section2 article{
     /* width:300px;     */
     color: #919191;
 }
 #section2 article figure img{
+    width : 290px;
+    height : 180px;
     border:1px solid #DEDEDE;
     padding:4px;
     margin-bottom:10px;
@@ -106,7 +110,7 @@
     font-style:italic;
     line-height:normal;
 }
-#section2 article figcaption .para{
+#section2 article figcaption p{
     margin:13px 0;
     line-height:1.6em;
 }
@@ -134,11 +138,13 @@
 }
 #section3 figcaption{
     order:1;
-    /* width:460px; */
+    
     color: #989898;
     line-height:1.6em;
 }
 #section3 figure img{
+    width:460px;
+    height:250px
     padding:4px;
     border: 1px solid #D6D6D6;
     margin-bottom:10px;
