--- a/Assignments/Assignment_Table/T-84/movie_poster_style.css
+++ b/Assignments/Assignment_Table/T-84/movie_poster_style.css
@@ -3,7 +3,29 @@
 html{
     overflow-y:scroll;
 } 
+#header{
+    display:block; 
+    width:960px; 
+    margin:0 auto;
+    overflow: auto;
 
+  }
+  #header nav ul li {
+    width: 75px;
+    list-style-type: none;
+    padding: 10px;
+    text-align: center;
+    display:inline-block;
+    text-transform: uppercase;
+    font-size:13px;
+    }
+  nav {
+    clear: both;
+    margin: 10px auto;
+    background-color: #232323;
+    padding:10px; 
+    margin: 20px 0;
+  }
 body{
     margin:0; 
     padding:0; 
